# joel-bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  config.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: rust.yml  rust_publish.yml
infrastructure/: main.bicep
resources/: text.yaml
src/: client.rs  config.rs  events.rs  last_day.rs  lib.rs  main.rs  slack.rs
src/api/: mod.rs  routes.rs  sl.rs  slack.rs
