[package]
name = "joel-bot"
version = "2.0.0"
authors = [
    "Fabian Eriksson <fabian.eriksson@magello.se>",
    "Joakim Anell <an3ll@hotmail.com>",
    "Simon Olander <supersimon@spray.se>",
    "Petter Salminen <petter.salminen@magello.se>",
    "Eric von Knorring <eric.von.knorring@magello.se>",
]
edition = "2021"

[lib]
name = "slack"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.16", features = ["blocking", "json"] }
tokio = "1.45.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.27"
serde_json = "1.0"
rocket = { version = "0.5.1", features = ["json"] }
chrono = "0.4.41"
chrono-tz = "0.10.3"
clokwerk = "0.4.0"
rand = { version = "0.9.1", features = ["small_rng"] }
async-trait = "0.1.88"
anyhow = "1.0.98"
