[package]
name = "joel-bot"
version = "2.0.0"
authors = [
    "Fabian Eriksson <fabian.eriksson@magello.se>",
    "Joakim Anell <an3ll@hotmail.com>",
    "Simon Olander <supersimon@spray.se>",
    "Petter Salminen <petter.salminen@magello.se>",
    "Eric von Knorring <eric.von.knorring@magello.se>",
]
edition = "2021"

[lib]
name = "slack"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.22", features = ["blocking", "json"] }
tokio = "1.47.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.27"
serde_json = "1.0"
rocket = { version = "0.5.1", features = ["json"] }
chrono = "0.4.41"
chrono-tz = "0.10.4"
clokwerk = "0.4.0"
rand = { version = "0.9.2", features = ["small_rng"] }
async-trait = "0.1.88"
anyhow = "1.0.99"
